--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
     FB.api('/me', function(response) {
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
+        'Thanks for logging in, ' + response.name + '<br>'+response.email+'<br>'+response.id+'<br>'+response.username;
     });
   }
+
 </script>
 
 <!--
