--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '<br>'+response.email+'<br>'+response.id+'<br>'+response.link;
+        var user_image = "https://graph.facebook.com/"+respnse.id+"/picture?type=large";
+      document.getElementById('image').innerHTML="<img src='"+user_image+"'>";
     });
   }
 
@@ -98,6 +100,7 @@
 
 <div id="status">
 </div>
+<div id="image"></div>
 
 </body>
 </html>
