--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ FB.login(function(response) {
 
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
-<a onclick="ask_friends();">friends</a>
+<a href="#" onclick="ask_friends();">friends</a>
 
 <div id="status">
 </div>
