--- a/in_login/index.html
+++ b/in_login/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script type="text/javascript" src="https://platform.linkedin.com/in.js">
-  api_key: 75ysmmh4d04k7k
+  api_key: "75ysmmh4d04k7k"
   authorize: true
 </script>
  
@@ -22,15 +22,6 @@ function onLinkedInAuth() {
 <body>
 
 <script type="IN/Login" data-onAuth="onLinkedInAuth"></script>
-
-
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
-<a href="#" onclick="ask_friends();">friends</a>
-
-<div id="status">
-</div>
-<div id="image"></div>
 
 </body>
 </html>
