--- a/in_login/index.html
+++ b/in_login/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script type="text/javascript" src="https://platform.linkedin.com/in.js">
-  api_key: "75ysmmh4d04k7k"
+  api_key: 75ysmmh4d04k7k
   authorize: true
 </script>
  
