--- a/in_login/index.html
+++ b/in_login/index.html
@@ -20,8 +20,9 @@ function onLinkedInAuth() {
 <meta charset="UTF-8">
 </head>
 <body>
-
-<script type="IN/Login" data-onAuth="onLinkedInAuth"></script>
+<script type="in/Login">
+Hello, <?js= firstName ?> <?js= lastName ?>.
+</script>
 
 </body>
 </html>
