--- a/in_login/index.html
+++ b/in_login/index.html
@@ -3,16 +3,22 @@
 <head>
   <script type="text/javascript" src="https://platform.linkedin.com/in.js">
   api_key: 75ysmmh4d04k7k
+  onLoad: onLinkedInLoad
   authorize: true
 </script>
  
 <script type="text/javascript">
 function onLinkedInAuth() {
-  IN.API.Profile("me")
-    .result( function(me) {
-      var id = me.values[0].id;
-      // AJAX call to pass back id to your server
-    });
+IN.API.Profile("me").result(displayProfile);
+
+}
+function displayProfile(profile){
+   user=profile.values[0];
+document.getElementById("profile").innerHTML="User Id: "+user.id+"<br>First Name: "+user.firstName+"<br> Last Name"+user.lastName+"<br>Head Line: "+user.headline+"<br><img src='"+user.pictureUrl+"'>";
+}
+
+function onLinkedInload(){
+   IN.Event.on(IN, "auth", onLinkedInAuth);
 }
 </script>
 
@@ -21,8 +27,10 @@ function onLinkedInAuth() {
 </head>
 <body>
 <script type="in/Login">
-Hello, <?js= firstName ?> <?js= lastName ?>.
 </script>
+<div id="profile">
+
+  </div>
 
 </body>
 </html>
