--- a/in_login/index.html
+++ b/in_login/index.html
@@ -19,7 +19,7 @@ document.getElementById("profile").innerHTML="User Id: "+user.id+"<br>First Name
 
 function extraFields(profile){
   user=profile.values[0];
-document.getElementById("extra").innerHTML="Positions: "+user.num-connections;  
+document.getElementById("extra").innerHTML="Positions: "+user.numConnections;  
 }
 
 function load(){
