--- a/in_login/index.html
+++ b/in_login/index.html
@@ -19,7 +19,7 @@ document.getElementById("profile").innerHTML="User Id: "+user.id+"<br>First Name
 
 function extraFields(profile){
   user=profile.values[0];
-document.getElementById("extra").innerHTML="Summary: "+user.summary+"<br>Connections: "+user.numConnections+"<br>Location: "+user.location.name+"<br> Position: "+user.position.id;  
+document.getElementById("extra").innerHTML="Summary: "+user.summary+"<br>Connections: "+user.numConnections+"<br>Location: "+user.location.name+"<br> Position: "+user.positions.id;  
 }
 
 function load(){
