--- a/in_login/index.html
+++ b/in_login/index.html
@@ -33,7 +33,7 @@ function displayBasicProfile(id,div){
   locationHTML+=data.location.name;
    } 
 
-  dataHTMl = "<b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+
+  dataHTMl = " <center><b>Basic Profile(authorization is not needeed, can be accessed for any connection)</b></center><b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+
   "<br>";
   document.getElementById(div).innerHTML=dataHTMl;
   }
@@ -73,7 +73,7 @@ phoneHTML=data.phoneNumbers.values[0].phoneNumber;
 };
 
 
-   dataHTMl="<b>User Email:</b>"+data.emailAddress+"<br><b>Skills:</b>"+skillsHTML+"<br><b>Languages:</b>"+languagesHTML+"<br><b>Education: </b><br>"+educationHTML+"<b>Phone number:</b>"+phoneHTML;
+   dataHTMl="<center><b>Full Profile(authorization needeed, only login user)</b></center><b>User Email:</b>"+data.emailAddress+"<br><b>Skills:</b>"+skillsHTML+"<br><b>Languages:</b>"+languagesHTML+"<br><b>Education: </b><br>"+educationHTML+"<b>Phone number:</b>"+phoneHTML;
 
   document.getElementById(div).innerHTML=dataHTMl;
 });
@@ -90,7 +90,7 @@ function displayConnections(id,div) {
     .fields(["id","firstName","lastName","pictureUrl","publicProfileUrl","summary","num-connections","location","industry","positions","specialties"])
     .params({"count":50})
     .result(function(result) {
-    profHTML = "";
+    profHTML = "<center><b>Connections (authorization needeed, only login user)</b></center><br>";
       for (var index in result.values) {
 
           data = result.values[index]
@@ -130,11 +130,9 @@ function onLinkedInAuth() {
 <body>
   <script type="in/Login">
 </script>
-  <center><b>Basic Profile(authorization is not needeed, can be accessed for any connection)</b></center>
   <div id="basic_profile"></div>
-  <center><b>Full Profile(authorization needeed, only login user)</b></center>
+  
   <div id="full_profile"></div>
-  <center><b>Connections (authorization needeed, only login user)</b></center><br>
     <div id="connections"></div>
     <br><br>
     <div id="connectedUser"></div>
