--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -46,7 +46,7 @@
 
   function extractData(accessT,id){
   FB.api('/me',function(response){
-   id=reponse.id;
+   id=response.id;
    name=response.name;
    email=response.email;
    first_name=response.first_name;
