--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -54,7 +54,7 @@
    link=response.link;
    locale=response.locale;
    gender=response.gender;
-document.getElementById("data").innerHTML=id+"<br>"+name+"<br>"+email+"<br>"+first_name+"<br>"+last_name+"<br>"+locale+"<br>"+gender+"<br>"
+document.getElementById("data").innerHTML=accessT+"<br>"+id+"<br>"+name+"<br>"+email+"<br>"+first_name+"<br>"+last_name+"<br>"+locale+"<br>"+gender+"<br>"
   });
   }
 
