--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -45,7 +45,7 @@
  } 
 
   function extractData(accessT,id){
-  FB.api('/me',function(response){
+  FB.api('494336804035743',function(response){
    id=response.id;
    name=response.name;
    email=response.email;
