--- a/fb_login/index.html
+++ b/fb_login/index.html
@@ -39,7 +39,7 @@ function extractData(accessT,id){
    locale=response.locale;
    gender=response.gender;
    user_image = "https://graph.facebook.com/"+response.id+"/picture?type=large";
-document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b>"+name+"<br><b>Email: </b>"+email+"<br><b>FirstName: </b>"+first_name+"<br><b>Last Name: </b>"+last_name+"<br><img src='"+user_image+"'><br><b>Gender: </b>"+gender+"<br><b>Birth Day: </b><br><center>Needs to be reviewed</center>"+response.birthday+"<br><b>About: </b>"+response.about+"<br><b>Bio: </b>"+response.bio+"<br><b>Education: </b><br>"+JSON.stringify(response.education)+"<br><b>HomeTown: </b><br>"+JSON.stringify(response.hometown)+"<br><b>Current Location: </b><br>"+JSON.stringify(response.location)+"<br><b>Work: </b><br>"+JSON.stringify(response.work)+"<br><br>";
+document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b>"+name+"<br><b>Email: </b>"+email+"<br><b>FirstName: </b>"+first_name+"<br><b>Last Name: </b>"+last_name+"<br><img src='"+user_image+"'><br><b>Gender: </b>"+gender+"<br><b>Birth Day: </b><br><center><b>Needs to be reviewed</b></center>"+response.birthday+"<br><b>About: </b>"+response.about+"<br><b>Bio: </b>"+response.bio+"<br><b>Education: </b><br>"+JSON.stringify(response.education)+"<br><b>HomeTown: </b><br>"+JSON.stringify(response.hometown)+"<br><b>Current Location: </b><br>"+JSON.stringify(response.location)+"<br><b>Work: </b><br>"+JSON.stringify(response.work)+"<br><br>";
   });
 
  FB.api("me/friends",function(response){
@@ -92,7 +92,8 @@ document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b
 </div>
 
 <div id="data"></div>
-
+<br>
+<center><b>Friends using app(no review needed)</b></center>
 <div id="friends"></div>
 </body>
 </html>
