--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -41,6 +41,13 @@ function extractData(accessT,id){
    user_image = "https://graph.facebook.com/"+response.id+"/picture?type=large";
 document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b>"+name+"<br><b>Email: </b>"+email+"<br><b>FirstName: </b>"+first_name+"<br><b>Last Name: </b>"+last_name+"<br><img src='"+user_image+"'><br><b>Gender: </b>"+gender+"<br><b>Birth Day: </b>"+response.birthday+"<br><b>About: </b>"+response.about+"<br><b>Bio: </b>"+response.bio+"<br><b>Education: </b><br>"+JSON.stringify(response.education)+"<br><b>HomeTown: </b><br>"+JSON.stringify(response.hometown)+"<br><b>Current Location: </b><br>"+JSON.stringify(response.location)+"<br><b>Work: </b><br>"+JSON.stringify(response.work)+"<br><br>";
   });
+ 
+  FB.api("me/friends",function(response){
+        if (response && !response.error) {
+        /* handle the result */
+        document.getElementById("friends").innerHTML=JSON.stringify(response);
+      }
+ });
   }
 
  //initializing sdk starts    
@@ -84,5 +91,6 @@ document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b
 </div>
 <div id="image"></div>
 <div id="data"></div>
+<div id="friends"></div>
 </body>
 </html>
