--- a/in_login/index.html
+++ b/in_login/index.html
@@ -16,7 +16,7 @@ function load(){
 //function for displaying basic profile starts:
 //
 function displayBasicProfile(id,div){
- IN.API.Profile(id).fields("id","firstName","lastName","pictureUrl","publicProfileUrl","summary","num-connections","location","industry","positions","specialties").result(display);
+ IN.API.Profile(id).fields("id","firstName","lastName","maiden-name","formatted-name","phonetic-first-name","phonetic-last-name","formatted-phonetic-name","headline","distance","relation-to-viewer","current-share","site-standard-profile-request","pictureUrl","publicProfileUrl","summary","num-connections","location","industry","positions","specialties").result(display);
  function display(result) {
    data=result.values[0];
    PositionHTML="";
@@ -33,9 +33,9 @@ function displayBasicProfile(id,div){
   locationHTML+=data.location.name;
    } 
 
-  dataHTMl = " <center><b>Basic Profile(authorization is not needeed, can be accessed for any connection)</b></center><b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+
+  dataHTMl = "<b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+
   "<br>";
-  document.getElementById(div).innerHTML=dataHTMl;
+  document.getElementById(div).innerHTML=dataHTMl+"<center><b>Stringified Basic Profile Object</b></center><br>"+JSON.stringify(data)+"<br><br>";
   }
 }
 //function for displaying basic profile ends:
@@ -44,7 +44,7 @@ function displayBasicProfile(id,div){
 //function for displaying full profile starts
 
 function displayFullProfile(id,div){
-IN.API.Profile(id).fields(["email-address","last-modified-timestamp","proposal-comments","associations","interests","publications","patents:(title)","languages:(language)","skills:(skill)","certifications","educations","courses","volunteer","following","date-of-birth","suggestions","related-profile-views","honors-awards","phone-numbers","im-accounts","main-address","twitter-accounts"]).result(function(result){
+IN.API.Profile(id).fields(["email-address","last-modified-timestamp","proposal-comments","associations","interests","publications","patents","languages","skills","certifications","educations","courses","volunteer","three-current-positions","three-past-positions","num-recommenders","recommendations-received","mfeed-rss-url","following","job-bookmarks","date-of-birth","suggestions","member-url-resources","related-profile-views","honors-awards","phone-numbers","bound-account-types","im-accounts","main-address","twitter-accounts"]).result(function(result){
 data=result.values[0];  
 
 skillsHTML="";
@@ -73,9 +73,9 @@ phoneHTML=data.phoneNumbers.values[0].phoneNumber;
 };
 
 
-   dataHTMl="<center><b>Full Profile(authorization needeed, only login user)</b></center><b>User Email:</b>"+data.emailAddress+"<br><b>Skills:</b>"+skillsHTML+"<br><b>Languages:</b>"+languagesHTML+"<br><b>Education: </b><br>"+educationHTML+"<b>Phone number:</b>"+phoneHTML;
+   dataHTMl="<b>User Email:</b>"+data.emailAddress+"<br><b>Skills:</b>"+skillsHTML+"<br><b>Languages:</b>"+languagesHTML+"<br><b>Education: </b><br>"+educationHTML+"<b>Phone number:</b>"+phoneHTML;
 
-  document.getElementById(div).innerHTML=dataHTMl;
+  document.getElementById(div).innerHTML=dataHTMl+"<br><br><center><b>Stringified Full Profile Object</b></center><br>"+JSON.stringify(data)+"<br><br>";
 });
 
 
@@ -87,10 +87,10 @@ phoneHTML=data.phoneNumbers.values[0].phoneNumber;
 //connection function starts
 function displayConnections(id,div) {
  IN.API.Connections(id)
-    .fields(["id","firstName","lastName","pictureUrl","publicProfileUrl","summary","num-connections","location","industry","positions","specialties"])
-    .params({"count":50})
+    .fields(["id","firstName","lastName","maiden-name","formatted-name","phonetic-first-name","phonetic-last-name","formatted-phonetic-name","headline","distance","relation-to-viewer","current-share","site-standard-profile-request","pictureUrl","publicProfileUrl","summary","num-connections","location","industry","positions","specialties"])
+    .params({"count":150})
     .result(function(result) {
-    profHTML = "<center><b>Connections (authorization needeed, only login user)</b></center><br>";
+    profHTML = "";
       for (var index in result.values) {
 
           data = result.values[index]
@@ -108,7 +108,7 @@ function displayConnections(id,div) {
   locationHTML+=data.location.name;
    } 
 
-  profHTML += "<b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+"<br><hr>";
+  profHTML += "<b>User Id :</b>"+data.id+"<br><b>First Name: </b>"+data.firstName+"<br><b>Last Name:</b>"+data.lastName+"<br><img src='"+data.pictureUrl+"'> <br><b>Summary of Profile: </b>"+data.summary+"<br><b>Specialties: </b>"+data.specialties+"<br><b>Connections: </b>"+data.numConnections+"<br><b>Location: </b>"+locationHTML+"<br><b>Employment :</b><br> "+PositionHTML+"<br>"+"<center><b>Stringified Basic Profile Object</b></center><br>"+JSON.stringify(data)+"<br><br>"+"<hr>";
           }
           document.getElementById(div).innerHTML=profHTML;    
       });
@@ -128,12 +128,11 @@ function onLinkedInAuth() {
 </script>
 </head>
 <body>
-  <script type="in/Login">
-</script>
+  <center><b>Basic Profile(authorization is not needeed, can be accessed for any connection)</b></center>
   <div id="basic_profile"></div>
-  
+  <center><b>Full Profile(authorization needeed, only login user)</b></center>
   <div id="full_profile"></div>
+  <center><b>Connections (authorization needeed, only login user)</b></center><br>
     <div id="connections"></div>
     <br><br>
-    <div id="connectedUser"></div>
   </body>
