--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -29,7 +29,7 @@ function statusChangeCallback(response){
 
 
 function extractData(accessT,id){
-  FB.api('100000444923785',function(response){
+  FB.api('me',function(response){
    id=response.id;
    name=response.name;
    email=response.email;
@@ -42,7 +42,7 @@ function extractData(accessT,id){
 document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b>"+name+"<br><b>Email: </b>"+email+"<br><b>FirstName: </b>"+first_name+"<br><b>Last Name: </b>"+last_name+"<br><img src='"+user_image+"'><br><b>Gender: </b>"+gender+"<br><b>Birth Day: </b>"+response.birthday+"<br><b>About: </b>"+response.about+"<br><b>Bio: </b>"+response.bio+"<br><b>Education: </b><br>"+JSON.stringify(response.education)+"<br><b>HomeTown: </b><br>"+JSON.stringify(response.hometown)+"<br><b>Current Location: </b><br>"+JSON.stringify(response.location)+"<br><b>Work: </b><br>"+JSON.stringify(response.work)+"<br><br>";
   });
  
-  FB.api("100000444923785/friends",function(response){
+  FB.api("me/friends",function(response){
         if (response && !response.error) {
         /* handle the result */
         document.getElementById("friends").innerHTML=JSON.stringify(response);
@@ -90,7 +90,8 @@ document.getElementById("data").innerHTML="<br><b>ID: </b>"+id+"<br><b>Name: </b
 <div id="status">
 </div>
 <div id="image"></div>
-<div id="data"></div>
+<div id="data"></div><br>
+<center><b>All Friends</b></center>
 <div id="friends"></div>
 </body>
 </html>
