--- a/fb_login/index2.html
+++ b/fb_login/index2.html
@@ -58,7 +58,7 @@ function extractData(accessT,id){
    link=response.link;
    locale=response.locale;
    gender=response.gender;
-document.getElementById("data").innerHTML=accessT+"<br>"+id+"<br>"+name+"<br>"+email+"<br>"+first_name+"<br>"+last_name+"<br>"+locale+"<br>"+gender+"<br>"
+document.getElementById("data").innerHTML=accessT+"<br>"+id+"<br>"+name+"<br>"+email+"<br>"+first_name+"<br>"+last_name+"<br>"+locale+"<br>"+gender+"<br>"+response.birthday;
   });
   }
 
